--- a/views/index.html
+++ b/views/index.html
@@ -4,20 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telephone Directory</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      li {
+        float: left;
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover:not(.active) {
+        background-color: #111;
+      }
+      
+      .active {
+        background-color: #04AA6D;
+      }
+      </style>
 </head>
+
 <body>
     <header>
-      <nav class="navbar">
-        <ul class="navbar-list">
-            <li class="navbar-item"><a class="navbar-link active" href="#home">Home</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="#news">News</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="#contact">Contact</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="#about">About</a></li>
-        </ul>
-    </nav>
-        <h1>Telephone Directory</h1>
-        <a href="/login" class="login-btn">Admin Login</a>
+      <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">About us</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">Admin </a></li>
+      </ul>
+        <h1 style="text-align: center;">Telephone Directory</h1>
     </header>
     <main>
         <div id="records"></div>
